# tsp

./: .gitignore  CMakeLists.txt  README.md  checksol.c  random.c  solve.c  tsp.c  tsp.h
data/: test0.txt  test1.txt  test2.txt
